2009-06-09  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -_sqlStringRangeFromto:]): dates are not
	necessarily defined in case of vTODOs; don't apply the range
	constraint when dates are null so the SQL query return tasks.

2009-06-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m (-davCollectionTag): moved method
	from SOGoAppointmentFolder since we will need it for contacts
	folders as well.

2009-06-08  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m: Added c_cycleenddate in
	dav date limitation. Added c_cycleenddate = NULL

2009-06-05  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m: Added support to ignore
	office hours.
	* UI/Templates/SchedulerUI/UIxAttendeesEditor.wox: Removed old commented-out
	buttons, added text as a proper string.
	* UI/WebServerResources/UIxAttendeesEditor.js: Fixed scrolling issues,
	added support for "onlyOfficeHours" checkbox

2009-06-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject+Draft.m: add a default
	attachment path of "1" when path is nil and thus unique.

	* UI/SOGoUI/UIxComponent.m (-_parseQueryString:): fixed handling
	of bad charsets in the parameters encoding. Invalid values will be
	discarded.

	* SoObjects/Contacts/SOGoContactGCSFolder.m
	(-lookupContactsWithFilter:sortBy:ordering:): same as below.

	* SoObjects/SOGo/LDAPSource.m: properly escaped user-entered
	strings which may contain quotes and thereby mess up the LDAP
	queries.

2009-06-04  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m: Added everything needed for the
	findSlot action. Fixes for allday & multiday events.

	* UI/WebServerResources/UIxAttendeesEditor.js: Added everything needed for
	the findSlot action. Fixes for allday events. Fixed scrolling issues
	